--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
+:root {
+  --color-accent: #3b82f6;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -9,6 +13,7 @@ html {
 }
 
 body {
+  font-family: 'Inter', sans-serif;
   font-size: 16px;
   margin: 0;
   padding: 0;
