Working on navbar responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .container {
   max-width: 1440px;
   margin: auto;
+  padding: 0 2rem;
 }
 
 .section__padding {
@@ -14,4 +15,38 @@ a {
 
 a:hover {
   color: var(--color-accent);
+}
+
+@media screen and (max-width: 880px) {
+  .container {
+    padding: 0 4rem;
+  }
+}
+
+/* Animations */
+.scale-up-center {
+  -webkit-animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1)
+    both;
+  animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+@-webkit-keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
 }
