--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,12 @@
   --color-text: #333;
 }
 
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -19,4 +23,7 @@ body {
   font-size: 16px;
   margin: 0;
   padding: 0;
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
