--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,23 @@ a:hover {
   color: var(--color-accent);
 }
 
+a:visited {
+  color: var(--color-text);
+}
+
+.btn {
+  padding: 1.5rem 4rem;
+  border-radius: 6px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.btn-filled {
+  background: var(--color-accent);
+  color: #fff;
+}
+
 @media screen and (max-width: 880px) {
   .container {
     padding: 0 4rem;
