--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -32,8 +32,16 @@
 
 .hero__content {
   margin-top: 3rem;
-  font-weight: 700;
+  font-weight: 500;
   font-size: 2.2rem;
   line-height: 4rem;
   color: var(--color-text);
+  margin-bottom: 4.5rem;
+}
+
+.hero__container .hero__button {
+  color: #fff;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 4rem;
 }
