--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 .section__padding {
-  margin: 12rem 0;
+  margin: 10rem auto;
 }
 
 .text-accent {
@@ -21,9 +21,9 @@ a:hover {
   color: var(--color-accent);
 }
 
-a:visited {
+/* a:visited {
   color: var(--color-text);
-}
+} */
 
 .btn {
   padding: 1.5rem 4rem;
@@ -36,6 +36,29 @@ a:visited {
 .btn-filled {
   background: var(--color-accent);
   color: #fff;
+}
+
+.btn-outline {
+  border: 1px solid var(--color-accent);
+  color: var(--color-accent);
+}
+
+.heading__title {
+  font-weight: 700;
+  font-size: 4rem;
+  line-height: 4.8rem;
+  text-align: center;
+  letter-spacing: 0.12em;
+  text-transform: uppercase;
+  color: var(--color-title);
+}
+
+.divider {
+  height: 5px;
+  width: 5rem;
+  background: var(--color-accent);
+  display: block;
+  margin: 2.5rem auto 0;
 }
 
 /* Animations */
