Addding contact blocks to contact section

--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -1,3 +1,25 @@
+.contact__socials__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+  margin: 12rem auto;
+}
+
+.contact__socials-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #fff;
+  padding: 4rem 6rem;
+  border-radius: 6px;
+  box-shadow: rgb(100 100 111 / 20%) 0 7px 29px 0;
+}
+
+.contact__socials-user {
+  margin-top: 2rem;
+}
+
 .contact__form__container {
   margin: 12rem auto;
   padding: 4rem;
