--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -4,6 +4,7 @@
   align-items: center;
   gap: 5rem;
   margin: 12rem auto;
+  flex-wrap: wrap;
 }
 
 .contact__socials-block {
@@ -11,9 +12,10 @@
   flex-direction: column;
   align-items: center;
   background: #fff;
-  padding: 4rem 6rem;
+  padding: 4rem;
   border-radius: 6px;
   box-shadow: rgb(100 100 111 / 20%) 0 7px 29px 0;
+  width: 300px;
 }
 
 .contact__socials-user {
