Correcting font size of contact form button

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@ img {
   outline: none;
   cursor: pointer;
   box-shadow: 0 5px 15px 0 rgb(0 0 0 / 15%);
+  font-size: 1.6rem;
 }
 
 .btn-filled {
