--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -37,3 +37,9 @@
   padding: 2rem;
   border-radius: 6px;
 }
+
+.footer__socials-block:hover {
+  -webkit-animation: shake-bottom 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955)
+    both;
+  animation: shake-bottom 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
+}
