Adding email link and changing link colour

--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -18,6 +18,10 @@
   width: 300px;
 }
 
+.contact__socials-block a {
+  color: var(--color-accent);
+}
+
 .contact__socials-user {
   margin-top: 2rem;
 }
