--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -3,3 +3,11 @@
   margin: 0 auto;
   max-width: 1000px;
 }
+
+@media screen and (max-width: 590px) {
+  .projects__container {
+    padding-top: 8rem;
+    margin: 0 auto;
+    max-width: 1000px;
+  }
+}
