Footer mobile spacing

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -43,3 +43,9 @@
     both;
   animation: shake-bottom 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
 }
+
+@media screen and (max-width: 404px) {
+  .footer__socials-block {
+    padding: 1rem;
+  }
+}
